thêm tính năng thông báo